@@ -1,3 +1,7 @@
+2010-04-03 Starboy Qi <starboy.qi@gmail.com>
+	* Add ImageMagick in Fedora
+	* Print Alert_Message when remove the ff_extension 
+	
 2010-04-02 Starboy Qi <starboy.qi@gmail.com>
 
     * Improve copyright text in "About" dialog
